flix layout issue

--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -33,6 +33,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+    flex-wrap: wrap;
 
     a {
       display: flex;
@@ -41,6 +42,7 @@
       background-color: hsla(231, 17%, 16%, 0.2);
       padding: 0.5rem 0.7rem;
       border-radius: 5px;
+      white-space: nowrap;
     }
   }
 }
@@ -71,7 +73,7 @@
   &__input {
     display: block;
     background-color: transparent;
-    padding: 1.2rem 1.9rem;
+    padding: 1.2rem 2.2rem;
     font-size: 1.6rem;
     font-family: variable.$baseFont;
     border-radius: 5px;
